--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ DOCUTALK_APPWRITE_DOC_COLLECTION_ID=
 DOCUTALK_UPLOAD_API_ENDPOINT=
 DOCUTALK_DELETE_API_ENDPOINT=
 DOCUTALK_QUERY_API_ENDPOINT=
-STANDARD_MAX_QUERY_COUNT=5
-STANDARD_MAX_DOC_COUNT=10 
+STANDARD_MAX_QUERY_COUNT=
+STANDARD_MAX_DOC_COUNT= 
