--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react_test",
+  "name": "docutalk_website",
   "homepage": "https://docutalk.github.io/docutalk/",
   "private": false,
-  "version": "0.0.0",
+  "version": "1.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,6 +14,7 @@
     "build:save": "npm run build && mkdir -p builds/build_$(date +%Y%m%d_%H%M%S) && cp -r build/* builds/build_$(date +%Y%m%d_%H%M%S)/"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
