--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,7 @@ DOCUTALK_UPLOAD_API_ENDPOINT=
 DOCUTALK_DELETE_API_ENDPOINT=
 DOCUTALK_QUERY_API_ENDPOINT=
 STANDARD_MAX_QUERY_COUNT=
-STANDARD_MAX_DOC_COUNT= 
+STANDARD_MAX_DOC_COUNT=
+
+VITE_DEV_VERIFY_URL=http://localhost:5173/verify
+VITE_PROD_VERIFY_URL=https://your-production-domain.com/verify 
