--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.22.0",
     "scroll-lock": "^2.1.5",
