--- a/.env.production
+++ b/.env.production
@@ -12,4 +12,4 @@ VITE_MAX_DOC_COUNT=1
 DOCUTALK_PROJECT_ID='6771e4f60010b0ea14e8'
 DOCUTALK_ENDPOINT=https://cloud.appwrite.io/v1
 VITE_DEV_VERIFY_URL=http://localhost:5173/docutalk/verify
-VITE_PROD_VERIFY_URL=https://docutalk.github.io/verify
+VITE_PROD_VERIFY_URL=https://docutalk.github.io/docutalk/verify
