--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ STANDARD_MAX_QUERY_COUNT=
 STANDARD_MAX_DOC_COUNT=
 
 VITE_DEV_VERIFY_URL=http://localhost:5173/verify
-VITE_PROD_VERIFY_URL=https://your-production-domain.com/verify 
+VITE_PROD_VERIFY_URL=https://docutalk.github.io/docutalk/verify 
